objects/Replacement_Part_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Case_Line_Item__c</fullName>
        <label>Case Line Item</label>
        <referenceTo>Case_Line_Items__c</referenceTo>
        <relationshipLabel>Replacement Part Details</relationshipLabel>
        <relationshipName>Replacement_Part_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Replacement Part Details</relationshipLabel>
        <relationshipName>Replacement_Part_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Damaged_Detail__c</fullName>
        <label>Damaged Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Damaged</fullName>
                </value>
                <value>
                    <fullName>RH Damaged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ETA_Date__c</fullName>
        <label>ETA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Missing_Detail__c</fullName>
        <label>Missing Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>FMSO or Outlet</fullName>
                </value>
                <value>
                    <fullName>Requesting Extra</fullName>
                </value>
                <value>
                    <fullName>RH Caused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Part_Identification__c</fullName>
        <label>Part Identification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assembly Instructions</fullName>
                </value>
                <value>
                    <fullName>CW Item Number</fullName>
                </value>
                <value>
                    <fullName>Name/ Description</fullName>
                </value>
                <value>
                    <fullName>Photo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Part_SKU_Notes__c</fullName>
        <label>Part SKU Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Part_SKU_Number__c</fullName>
        <label>Part SKU Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Type_Description__c</fullName>
        <label>Part Type Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Part_Type__c</fullName>
        <label>Part Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accent Pillow Casing</fullName>
                </value>
                <value>
                    <fullName>Accent Pillow Core</fullName>
                </value>
                <value>
                    <fullName>Back Casing</fullName>
                </value>
                <value>
                    <fullName>Back Core</fullName>
                </value>
                <value>
                    <fullName>Bulbs</fullName>
                </value>
                <value>
                    <fullName>Crystals</fullName>
                </value>
                <value>
                    <fullName>Feet/Foot Glide</fullName>
                </value>
                <value>
                    <fullName>Hardware Pack/Assembly Hardware</fullName>
                </value>
                <value>
                    <fullName>Mounting Hardware</fullName>
                </value>
                <value>
                    <fullName>Nail Head/ Button</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Seat Casing</fullName>
                </value>
                <value>
                    <fullName>Seat Core</fullName>
                </value>
                <value>
                    <fullName>Shelf/ Bracket</fullName>
                </value>
                <value>
                    <fullName>Slipcover</fullName>
                </value>
                <value>
                    <fullName>Tip Kit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Source__c</fullName>
        <label>Payment Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Paying</fullName>
                </value>
                <value>
                    <fullName>RH Paying</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity_Needed__c</fullName>
        <label>Quantity Needed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Damaged</fullName>
                </value>
                <value>
                    <fullName>Defective</fullName>
                </value>
                <value>
                    <fullName>Missing Part</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tracking_to_Client__c</fullName>
        <label>Tracking to Client</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_to_Corporate__c</fullName>
        <label>Tracking to Corporate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_to_DC__c</fullName>
        <label>Tracking to DC</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Replacement Part Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RPD-{0}</displayFormat>
        <label>Replacement Part Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Replacement Part Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>